# docs/swagger.json
@@ -1,6 +1,7 @@
 {
     "schemes": [
-        "http"
+        "http,",
+        "https"
     ],
     "swagger": "2.0",
     "info": {
@@ -80,7 +81,7 @@
                     }
                 ],
                 "responses": {
-                    "301": {
+                    "302": {
                         "description": "Redirect"
                     },
                     "404": {
